--- a/bower.json
+++ b/bower.json
@@ -17,22 +17,22 @@
         "tests"
     ],
     "dependencies": {
-        "angular": "~1.3.0",
-        "angular-bootstrap": "~0.10.0",
-        "angular-cookies": "~1.3.0",
-        "angular-resource": "~1.3.0",
-        "angular-route": "~1.3.0",
-        "angular-translate": "~2.1.0",
-        "angular-ui-router": "~0.2.9",
+        "angular": "*",
+        "angular-bootstrap": "*",
+        "angular-cookies": "*",
+        "angular-resource": "*",
+        "angular-route": "*",
+        "angular-translate": "*",
+        "angular-ui-router": "*",
         "angularjs-localizationservice": "git://github.com/lavinjj/angularjs-localizationservice/",
-        "bootstrap": "~3.1.1",
-        "growl": "~1.1.5",
+        "bootstrap": "*",
+        "growl": "*",
         "jqueryui": "*",
         "moment": "*",
         "requirejs": "*",
         "spinjs": "*",
         "sprintf": "*",
-        "underscore": "~1.6.0",
+        "underscore": "*",
         "zef-angularjs-i18n": "git://github.com/zeflasher/angularjs-i18n"
     }
 }
